--- a/src/main/resources/view/ContentArea.fxml
+++ b/src/main/resources/view/ContentArea.fxml
@@ -5,11 +5,11 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="317.0" prefWidth="561.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.tjago.apps.ivonatalker.controller.ContentAreaController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="561.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.tjago.apps.ivonatalker.controller.ContentAreaController">
    <children>
       <TextArea fx:id="textArea" layoutX="65.0" layoutY="97.0" prefHeight="145.0" prefWidth="432.0" text="Hello friendly human!" wrapText="true" />
       <ComboBox fx:id="languageComboBox" layoutX="245.0" layoutY="26.0" onAction="#onChangeLanguageCombobox" prefWidth="150.0" />
-      <Button layoutX="156.0" layoutY="262.0" mnemonicParsing="false" onAction="#btnReadTextPressed" text="Read text">
+      <Button layoutX="113.0" layoutY="262.0" mnemonicParsing="false" onAction="#btnReadTextPressed" text="Read text">
          <font>
             <Font name="Cambria Bold Italic" size="18.0" />
          </font>
@@ -25,7 +25,12 @@
             <Font name="Book Antiqua" size="18.0" />
          </font>
       </Label>
-      <Button fx:id="saveButton" layoutX="286.0" layoutY="262.0" mnemonicParsing="false" onAction="#handleSave" text="Save voice">
+      <Button fx:id="saveButton" layoutX="398.0" layoutY="302.0" mnemonicParsing="false" onAction="#handleSave" prefHeight="34.0" prefWidth="134.0" text="Save voice..">
+         <font>
+            <Font name="Cambria Bold Italic" size="18.0" />
+         </font>
+      </Button>
+      <Button layoutX="257.0" layoutY="262.0" mnemonicParsing="false" onAction="#stopReading" text="stop reading">
          <font>
             <Font name="Cambria Bold Italic" size="18.0" />
          </font>
