new branch to migrate to AWS Polly

--- a/src/main/resources/view/CredentialsModal.fxml
+++ b/src/main/resources/view/CredentialsModal.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.tjago.apps.ivonatalker.controller.AwsCredentialsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.tjago.apps.pollytalker.controller.AwsCredentialsController">
    <children>
       <Pane prefHeight="189.0" prefWidth="400.0">
          <children>
