--- a/src/main/resources/view/ContentArea.fxml
+++ b/src/main/resources/view/ContentArea.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="561.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.tjago.apps.ivonatalker.controller.ContentAreaController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="561.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.tjago.apps.pollytalker.controller.ContentAreaController">
    <children>
       <TextArea fx:id="textArea" layoutX="65.0" layoutY="97.0" prefHeight="145.0" prefWidth="432.0" text="Hello friendly human!" wrapText="true" />
       <ComboBox fx:id="languageComboBox" layoutX="245.0" layoutY="26.0" onAction="#onChangeLanguageCombobox" prefWidth="150.0" />
