further code improvements

--- a/src/main/resources/view/CredentialsModal.fxml
+++ b/src/main/resources/view/CredentialsModal.fxml
@@ -14,7 +14,7 @@
             <Label layoutX="59.0" layoutY="142.0" text="Secret Key" />
             <TextField fx:id="accessKey" layoutX="193.0" layoutY="88.0" />
             <PasswordField fx:id="secretKey" layoutX="193.0" layoutY="138.0" />
-            <Label layoutX="79.0" layoutY="30.0" text="Set Credentials for Ivona AWS">
+            <Label layoutX="79.0" layoutY="30.0" text="Set Credentials for AWS Polly">
                <font>
                   <Font size="18.0" />
                </font>
