cleanup before master merge

--- a/src/main/resources/view/CredentialsModal.fxml
+++ b/src/main/resources/view/CredentialsModal.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.tjago.apps.pollytalker.controller.AwsCredentialsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.tjago.apps.pollytalker.controller.AwsCredentialsController">
    <children>
       <Pane prefHeight="189.0" prefWidth="400.0">
          <children>
@@ -23,9 +26,8 @@
       </Pane>
       <ButtonBar layoutX="45.0" layoutY="187.0" prefHeight="40.0" prefWidth="310.0">
         <buttons>
-          <Button contentDisplay="CENTER" mnemonicParsing="false" onAction="#onTest" prefHeight="25.0" prefWidth="90.0" text="Test" />
-            <Button mnemonicParsing="false" onAction="#onSave" text="Save" />
-            <Button minWidth="71.0" mnemonicParsing="false" onAction="#onClose" prefHeight="25.0" text="Close" />
+          <Button contentDisplay="CENTER" mnemonicParsing="false" onAction="#onTest" prefHeight="25.0" prefWidth="164.0" text="Test" />
+            <Button mnemonicParsing="false" onAction="#onSave" text="Save &amp; Close" />
         </buttons>
       </ButtonBar>
    </children>
