--- a/src/main/resources/view/AboutModal.fxml
+++ b/src/main/resources/view/AboutModal.fxml
@@ -1,50 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.Bloom?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="258.0" prefWidth="459.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.tjago.apps.pollytalker.controller.AboutModalController">
-   <children>
-      <BorderPane prefHeight="400.0" prefWidth="473.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <left>
-            <ImageView fx:id="ivonaServiceLogo" fitHeight="150.0" fitWidth="164.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
-         </left>
-         <center>
-            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Label text="Ivona Talker App">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="JavaFX user friendly wrapper for Ivona Amazon Service" wrapText="true">
-                     <effect>
-                        <Bloom />
-                     </effect>
-                  </Label>
-                  <Label alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="281.0" text="Author: tjago" textAlignment="RIGHT">
-                     <VBox.margin>
-                        <Insets top="50.0" />
-                     </VBox.margin>
-                  </Label>
-                  <Hyperlink alignment="CENTER_RIGHT" focusTraversable="false" prefHeight="23.0" prefWidth="283.0" text="http://github.com/tjago" textAlignment="RIGHT" />
-               </children>
-               <BorderPane.margin>
-                  <Insets left="10.0" top="50.0" />
-               </BorderPane.margin>
-            </VBox>
-         </center>
-         <bottom>
-            <Button mnemonicParsing="false" onAction="#onClose" text="Close" BorderPane.alignment="CENTER" />
-         </bottom>
-         <padding>
-            <Insets bottom="10.0" />
-         </padding>
-      </BorderPane>
-   </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="258.0"
+            prefWidth="459.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="eu.tjago.apps.pollytalker.controller.AboutModalController">
+   <BorderPane prefHeight="400.0" prefWidth="473.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <left>
+         <ImageView fitHeight="150.0" fitWidth="164.0" pickOnBounds="true" preserveRatio="true"
+                    BorderPane.alignment="CENTER">
+            <Image url="@../img/amazon_polly_logo.png"/>
+         </ImageView>
+      </left>
+      <center>
+         <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+            <BorderPane.margin>
+               <Insets left="10.0" top="50.0"/>
+            </BorderPane.margin>
+            <Label text="Polly Talker App">
+               <font>
+                  <Font size="24.0"/>
+               </font>
+            </Label>
+            <Label text="A simple application tool for Amazon Polly Service" wrapText="true">
+               <effect>
+                  <Bloom/>
+               </effect>
+            </Label>
+            <Label alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="281.0" text="Author: tjago"
+                   textAlignment="RIGHT">
+               <VBox.margin>
+                  <Insets top="50.0"/>
+               </VBox.margin>
+            </Label>
+            <Hyperlink alignment="CENTER_RIGHT" focusTraversable="false" prefHeight="23.0" prefWidth="283.0"
+                       text="http://github.com/tjago" textAlignment="RIGHT"/>
+         </VBox>
+      </center>
+      <bottom>
+         <Button mnemonicParsing="false" onAction="#onClose" text="Close" BorderPane.alignment="CENTER"/>
+      </bottom>
+      <padding>
+         <Insets bottom="10.0"/>
+      </padding>
+   </BorderPane>
 </AnchorPane>
