--- a/src/main/resources/view/ContentArea.fxml
+++ b/src/main/resources/view/ContentArea.fxml
@@ -2,14 +2,13 @@
 
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
-<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="561.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.tjago.apps.pollytalker.controller.ContentAreaController">
    <children>
       <TextArea fx:id="textArea" layoutX="65.0" layoutY="97.0" prefHeight="145.0" prefWidth="432.0" text="Hello friendly human!" wrapText="true" />
       <ComboBox fx:id="languageComboBox" layoutX="245.0" layoutY="26.0" onAction="#onChangeLanguageCombobox" prefWidth="150.0" />
-      <Button layoutX="113.0" layoutY="262.0" mnemonicParsing="false" onAction="#btnReadTextPressed" text="Read text">
+      <Button layoutX="113.0" layoutY="262.0" mnemonicParsing="false" onAction="#btnReadTextPressed" text="Read text" fx:id="readText">
          <font>
             <Font name="Cambria Bold Italic" size="18.0" />
          </font>
@@ -30,7 +29,7 @@
             <Font name="Cambria Bold Italic" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="257.0" layoutY="262.0" mnemonicParsing="false" onAction="#stopReading" text="stop reading">
+      <Button layoutX="257.0" layoutY="262.0" mnemonicParsing="false" onAction="#stopReading" text="stop reading" fx:id="stopRead">
          <font>
             <Font name="Cambria Bold Italic" size="18.0" />
          </font>
